# Memory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/: create_demo_assets.py  demo.yaml
src/photo_memory_video/: __init__.py  cli.py  config_loader.py  file_dialogs.py  layout.py  photo_card.py  render.py  text_renderer.py  timeline.py  transitions.py  web.py  web_state.py
src/photo_memory_video/web_static/: app.css  app.js  index.html
tests/: test_config_loader.py  test_layout.py  test_rendering.py  test_web_state.py
