[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-memory-video"
version = "0.1.0"
description = "Generate warm university memory videos from YAML scene configs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "moviepy>=1.0.3,<3",
  "numpy>=1.23",
  "Pillow>=10",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
photo-memory-video = "photo_memory_video.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
photo_memory_video = ["web_static/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
